app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashiconf-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-app
        # Replace $LOCATION with your Artifact Registry location (e.g., us-west1).
        # Replace $GCLOUD_PROJECT  ith your project ID.
        image: us-west1-docker.pkg.dev/hashiconf-demo-363821/hashiconf-demo/hashiconf-demo:latest
        # This app listens on port 8080 for web traffic by default.
        ports:
        - containerPort: 8080
---

resource "kubernetes_ingress_v1" "managed_cert_ingress" {
  metadata {
    name = "managed-cert-ingress"

    annotations = {
      "kubernetes.io/ingress.class" = "gce"

      "kubernetes.io/ingress.global-static-ip-name" = "hashiconf-demo"

      "networking.gke.io/managed-certificates" = "managed-cert"
    }
  }

  spec {
    default_backend {
      service {
        name = "helloapp"

        port {
          number = 80
        }
      }
    }
  }
}

resource "google_compute_managed_ssl_certificate" "managed-cert" {
  name = "managed-cert"

  managed {
    domains = ["terraform-entra-demo.app"]
  }
}
